--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@hyperswarm/replicator": "^1.4.1",
-    "@polkadot/api": "^0.100.0-beta.19",
+    "@polkadot/api": "^1.0.1",
     "blake2b": "^2.1.3",
     "colors": "^1.4.0",
     "fetch": "^1.1.0",
@@ -24,6 +24,12 @@
     "random-access-memory": "^3.1.1"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "npm-run-all": "^4.1.5"
   }
 }
